Fixed overflowing issue while adding tags Improved Tags component and use antd tag to show tags

--- a/openmetadata-ui/src/main/resources/ui/src/styles/components/size.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/components/size.less
@@ -86,8 +86,11 @@
 .w-max-1080 {
   max-width: 1080px;
 }
-.w-max-80vw {
-  max-width: 80vw;
+.w-max-fit-content {
+  max-width: fit-content;
+}
+.w-max-95 {
+  max-width: 95%;
 }
 .w-300 {
   width: 300px;
